# timescale_assignment

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-flask  Dockerfile-test  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-flask.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
app/src/: import.py
reports/: result.xml
src/: api.py  functions.py  main.py
src/static/index/: custom.css
src/templates/: index.html  index2.html  table.html
static/css/: custom.css
test/: test_functions.py  test_main.py  test_percentile.py  test_query.py  test_save.py  test_write.py
test/reports/: result.xml
